--- a/PyCitySchools_Challenge_starter_code.ipynb
+++ b/PyCitySchools_Challenge_starter_code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 654,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
        "9          84  "
       ]
      },
-     "execution_count": 654,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 655,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 656,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 657,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 658,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
        "39169           95.0        75.0  "
       ]
      },
-     "execution_count": 658,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 659,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +555,7 @@
        "4        84.0          0  District  2917  1910635  "
       ]
      },
-     "execution_count": 659,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 660,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 661,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 700,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 663,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 664,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 701,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 666,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +710,7 @@
        "0                  81.9           74.8              85.7              64.9  "
       ]
      },
-     "execution_count": 666,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 667,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -797,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 668,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -927,7 +927,7 @@
        "Griffin High School           97.138965          90.599455  "
       ]
      },
-     "execution_count": 668,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -952,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 669,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1242,7 +1242,7 @@
        "Wright High School             96.611111          90.333333  "
       ]
      },
-     "execution_count": 669,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1258,7 +1258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 702,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1268,7 +1268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 703,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1278,7 +1278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 704,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1288,7 +1288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 705,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1298,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 706,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1308,7 +1308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 708,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1318,7 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 707,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1328,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 677,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1338,7 +1338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 678,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1348,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 679,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1358,7 +1358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 680,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1424,7 +1424,7 @@
        "Thomas High School          90.630324  "
       ]
      },
-     "execution_count": 680,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1443,10 +1443,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 681,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 29,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1575,7 +1573,7 @@
        "Pena High School             90.540541  "
       ]
      },
-     "execution_count": 681,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1589,7 +1587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 682,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1622,6 +1620,8 @@
        "      <th>% Passing Math</th>\n",
        "      <th>% Passing Reading</th>\n",
        "      <th>% Overall Passing</th>\n",
+       "      <th>Spending Ranges (Per Student)</th>\n",
+       "      <th>School Size</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1636,6 +1636,8 @@
        "      <td>66.366592</td>\n",
        "      <td>80.220055</td>\n",
        "      <td>52.988247</td>\n",
+       "      <td>$630-644</td>\n",
+       "      <td>Large (2000-5000)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Figueroa High School</th>\n",
@@ -1648,6 +1650,8 @@
        "      <td>65.988471</td>\n",
        "      <td>80.739234</td>\n",
        "      <td>53.204476</td>\n",
+       "      <td>$630-644</td>\n",
+       "      <td>Large (2000-5000)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Huang High School</th>\n",
@@ -1660,6 +1664,8 @@
        "      <td>65.683922</td>\n",
        "      <td>81.316421</td>\n",
        "      <td>53.513884</td>\n",
+       "      <td>$645-675</td>\n",
+       "      <td>Large (2000-5000)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Hernandez High School</th>\n",
@@ -1672,6 +1678,8 @@
        "      <td>66.752967</td>\n",
        "      <td>80.862999</td>\n",
        "      <td>53.527508</td>\n",
+       "      <td>$645-675</td>\n",
+       "      <td>Large (2000-5000)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Johnson High School</th>\n",
@@ -1684,6 +1692,8 @@
        "      <td>66.057551</td>\n",
        "      <td>81.222432</td>\n",
        "      <td>53.539172</td>\n",
+       "      <td>$645-675</td>\n",
+       "      <td>Large (2000-5000)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1711,15 +1721,22 @@
        "Hernandez High School              80.934412       66.752967   \n",
        "Johnson High School                80.966394       66.057551   \n",
        "\n",
-       "                       % Passing Reading  % Overall Passing  \n",
-       "Rodriguez High School          80.220055          52.988247  \n",
-       "Figueroa High School           80.739234          53.204476  \n",
-       "Huang High School              81.316421          53.513884  \n",
-       "Hernandez High School          80.862999          53.527508  \n",
-       "Johnson High School            81.222432          53.539172  "
+       "                       % Passing Reading  % Overall Passing  \\\n",
+       "Rodriguez High School          80.220055          52.988247   \n",
+       "Figueroa High School           80.739234          53.204476   \n",
+       "Huang High School              81.316421          53.513884   \n",
+       "Hernandez High School          80.862999          53.527508   \n",
+       "Johnson High School            81.222432          53.539172   \n",
+       "\n",
+       "                      Spending Ranges (Per Student)        School Size  \n",
+       "Rodriguez High School                      $630-644  Large (2000-5000)  \n",
+       "Figueroa High School                       $630-644  Large (2000-5000)  \n",
+       "Huang High School                          $645-675  Large (2000-5000)  \n",
+       "Hernandez High School                      $645-675  Large (2000-5000)  \n",
+       "Johnson High School                        $645-675  Large (2000-5000)  "
       ]
      },
-     "execution_count": 682,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1740,7 +1757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 683,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1774,7 +1791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 684,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1941,7 +1958,7 @@
        "Wright High School     83.264706  84.010288  83.836782  83.644986"
       ]
      },
-     "execution_count": 684,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1959,7 +1976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 685,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2046,7 +2063,7 @@
        "Griffin High School   83.369193  83.706897  84.288089  84.013699"
       ]
      },
-     "execution_count": 685,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2064,7 +2081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 686,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2085,7 +2102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 687,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -2164,7 +2181,7 @@
        "Griffin High School   82.0  84.2  83.8  83.4"
       ]
      },
-     "execution_count": 687,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2179,7 +2196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 688,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2258,7 +2275,7 @@
        "Griffin High School   83.369193  83.706897  84.288089  84.013699"
       ]
      },
-     "execution_count": 688,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2280,7 +2297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 689,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2603,7 +2620,7 @@
        "Wright High School                            <$584  "
       ]
      },
-     "execution_count": 689,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2621,7 +2638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 709,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2639,7 +2656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 691,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -2738,7 +2755,7 @@
        "$645-675                               53.526855  "
       ]
      },
-     "execution_count": 691,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2757,7 +2774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 692,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -2856,7 +2873,7 @@
        "$645-675                                     54  "
       ]
      },
-     "execution_count": 692,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2885,7 +2902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 693,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -3034,7 +3051,7 @@
        "Griffin High School                       $585-629  Medium (1000-2000)  "
       ]
      },
-     "execution_count": 693,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3051,7 +3068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 694,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3069,7 +3086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 695,
+   "execution_count": 43,
    "metadata": {
     "scrolled": true
    },
@@ -3153,7 +3170,7 @@
        "Large (2000-5000)           82.766634          58.286003  "
       ]
      },
-     "execution_count": 695,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3172,7 +3189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 696,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -3254,7 +3271,7 @@
        "Large (2000-5000)                 83                58  "
       ]
      },
-     "execution_count": 696,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3283,7 +3300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 697,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3301,7 +3318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 710,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3316,7 +3333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 699,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -3388,7 +3405,7 @@
        "District                   81                54  "
       ]
      },
-     "execution_count": 699,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
